[package]
name = "winpoke-cli"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
winpoke = { version = "0.1.0", path = "../winpoke" }

[build-dependencies]
winresource = "0.1.23"

[package.metadata.winresource]
OriginalFilename = "winpoke.exe"
FileDescription = "⛄❤☕"
LegalCopyright = "Copyright © 2025"
