[package]
name = "winpoke"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ariadne = "0.5.1"
chumsky = "0.11.1"
thiserror = "2.0.17"

[dependencies.windows]
version = "0.61.3"
features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_WindowsFilteringPlatform",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
]
